--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pillow
 gunicorn
 django-heroku
 dj-database-url==0.5.0                                                                                                                                                
-Django==2.1.5                                                                                                                                                         django-heroku==0.3.1                                                                                                                                                  
+Django=2.1.0                                                                                                                                                         django-heroku==0.3.1                                                                                                                                                  
 gunicorn==19.9.0                                                                                                                                                      
 psycopg2==2.7.7                                                                                                                                                       
 pytz==2018.9                                                                                                                                                          
