--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pip
 pillow
-django-heroku==0.3.1 
+django-heroku
 dj-database-url==0.5.0                                                                                                                                                                                                                                                                                                    django-heroku==0.3.1                                                                                                                                                  
 gunicorn==19.9.0                                                                                                                                                      
 psycopg2==2.7.7                                                                                                                                                       
