--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 pip
 pillow
-django-heroku
-dj-database-url                                                                                                                                                                                                                                                                                                    django-heroku==0.3.1                                                                                                                                                  
+django-heroku                                                                                                                                                                                                                                                                                                    django-heroku==0.3.1                                                                                                                                                  
 gunicorn                                                                                                                                                      
 psycopg2                                                                                                                                                       
 pytz                                                                                                                                                          
