--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 pip
-pillow
-django-heroku                                                                                                                                                                                                                                                                                                    django-heroku==0.3.1                                                                                                                                                  
+pillow                                                                                                                                                                                                                                                                                                   django-heroku==0.3.1                                                                                                                                                  
 gunicorn                                                                                                                                                      
 psycopg2                                                                                                                                                       
 pytz                                                                                                                                                          
